[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0.64"
mongodb = "2.1.1"
serde = "1.0.130"
once_cell = "1.8.0"
futures = "0.3.15"
chrono = "0.4.38"
tokio = "1.40.0"
tokio-stream = "0.1.16"
